--- a/package.json
+++ b/package.json
@@ -5,20 +5,28 @@
   "main": "dist/react-beautiful-dnd.cjs.js",
   "module": "dist/react-beautiful-dnd.esm.js",
   "sideEffects": false,
-  "files": ["/dist", "/src"],
+  "files": [
+    "/dist",
+    "/src"
+  ],
   "author": "Alex Reardon <alexreardon@gmail.com>",
   "license": "MIT",
   "scripts": {
     "test": "yarn jest",
     "lint": "yarn prettier --debug-check src/** test/**",
     "typecheck": "yarn flow",
-    "validate": "yarn lint && yarn flow"
+    "validate": "yarn lint && yarn flow",
+    "build": "yarn rollup --config rollup.config.js"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
     "flow-bin": "^0.70.0",
     "jest": "^22.4.3",
-    "prettier": "^1.12.1"
+    "prettier": "^1.12.1",
+    "rollup": "^0.58.0",
+    "rollup-plugin-babel": "^3.0.3"
   }
 }
