--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prettier": "^1.12.1",
     "rimraf": "^2.6.2",
     "rollup": "^0.64.1",
-    "rollup-plugin-babel": "^3.0.7"
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-replace": "^2.0.0"
   }
 }
