--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rimraf": "^2.6.2",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
-    "rollup-plugin-replace": "^2.0.0"
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-uglify": "^4.0.0"
   }
 }
