--- a/package.json
+++ b/package.json
@@ -35,15 +35,16 @@
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-flow": "^7.0.0",
+    "@babel/runtime-corejs2": "^7.4.2",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.5.0",
     "flow-bin": "^0.95.1",
     "jest": "^24.5.0",
     "prettier": "^1.16.4",
     "rimraf": "^2.6.3",
-    "rollup": "^0.67.0",
-    "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-uglify": "^6.0.0"
+    "rollup": "^1.7.3",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-replace": "^2.1.1",
+    "rollup-plugin-uglify": "^6.0.2"
   }
 }
