--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "author": "Alex Reardon <alexreardon@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alexreardon/tiny-invariant.git"
+    "url": "https://github.com/alexreardon/tiny-invariant.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alexreardon/tiny-invariant/issues"
   },
   "license": "MIT",
   "scripts": {
