--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "A tiny invariant function",
   "main": "dist/tiny-invariant.cjs.js",
   "module": "dist/tiny-invariant.esm.js",
-  "types": "src/index.d.ts",
+  "types": "dist/tiny-invariant.d.ts",
   "sideEffects": false,
   "files": [
     "/dist",
@@ -29,25 +29,24 @@
     "typecheck": "yarn flow",
     "validate": "yarn lint && yarn flow",
     "build:clean": "rimraf dist",
-    "build:flow": "echo \"// @flow\n\nexport * from '../src';\" > dist/tiny-invariant.cjs.js.flow",
+    "build:flow": "cp src/tiny-invariant.js.flow dist/tiny-invariant.cjs.js.flow",
+    "build:typescript": "tsc ./src/tiny-invariant.ts --emitDeclarationOnly --declaration --outDir ./dist",
     "build:dist": "yarn rollup --config rollup.config.js",
-    "build": "yarn build:clean && yarn build:dist && yarn build:flow",
+    "build": "yarn build:clean && yarn build:dist && yarn build:typescript",
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.0",
-    "@babel/preset-env": "^7.5.0",
-    "@babel/preset-flow": "^7.0.0",
-    "@babel/runtime-corejs2": "^7.5.1",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^24.8.0",
-    "flow-bin": "^0.102.0",
-    "jest": "^24.8.0",
+    "@types/jest": "^24.0.22",
+    "jest": "^24.9.0",
     "prettier": "^1.18.2",
-    "rimraf": "^2.6.3",
-    "rollup": "^1.16.6",
-    "rollup-plugin-babel": "^4.3.3",
+    "rimraf": "^3.0.0",
+    "rollup": "^1.26.3",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-uglify": "^6.0.2"
+    "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-typescript": "^1.0.1",
+    "rollup-plugin-uglify": "^6.0.3",
+    "ts-jest": "^24.1.0",
+    "tslib": "^1.10.0",
+    "typescript": "^3.7.2"
   }
 }
