--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "scripts": {
     "test": "yarn jest",
     "lint": "yarn prettier --debug-check src/** test/**",
-    "typecheck": "yarn flow",
-    "validate": "yarn lint && yarn flow",
+    "typecheck": "yarn tsc --noEmit src/*.ts test/*.ts",
+    "validate": "yarn lint && yarn typecheck",
     "build:clean": "rimraf dist",
     "build:flow": "cp src/tiny-invariant.js.flow dist/tiny-invariant.cjs.js.flow",
     "build:typescript": "tsc ./src/tiny-invariant.ts --emitDeclarationOnly --declaration --outDir ./dist",
@@ -36,6 +36,8 @@
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^2.3.0",
+    "@rollup/plugin-typescript": "^2.1.0",
     "@types/jest": "^24.9.1",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
@@ -43,8 +45,7 @@
     "rollup": "^1.29.1",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^5.2.0",
-    "rollup-plugin-typescript": "^1.0.1",
-    "rollup-plugin-uglify": "^6.0.4",
+    "ts-expect": "^1.1.0",
     "ts-jest": "^25.0.0",
     "tslib": "^1.10.0",
     "typescript": "^3.7.5"
