--- a/package.json
+++ b/package.json
@@ -37,17 +37,18 @@
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
-    "@rollup/plugin-replace": "^2.3.0",
-    "@rollup/plugin-typescript": "^3.0.0",
-    "@types/jest": "^25.1.0",
-    "jest": "^25.1.0",
-    "prettier": "^1.19.1",
-    "rimraf": "^3.0.1",
-    "rollup": "^1.30.1",
-    "rollup-plugin-terser": "^5.2.0",
-    "ts-expect": "^1.1.0",
-    "ts-jest": "^25.0.0",
-    "tslib": "^1.10.0",
-    "typescript": "^3.7.5"
+    "@rollup/plugin-replace": "^3.0.0",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "@types/jest": "^27.0.2",
+    "@types/rollup": "^0.54.0",
+    "expect-type": "^0.13.0",
+    "jest": "^27.3.1",
+    "prettier": "^2.4.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.58.3",
+    "rollup-plugin-terser": "^7.0.2",
+    "ts-jest": "^27.0.7",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.4"
   }
 }
