--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "/src"
   ],
   "author": "Alex Reardon <alexreardon@gmail.com>",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/alexreardon/tiny-invariant.git"
@@ -22,9 +23,28 @@
   "bugs": {
     "url": "https://github.com/alexreardon/tiny-invariant/issues"
   },
-  "license": "MIT",
+  "size-limit": [
+    {
+      "path": "dist/tiny-invariant.min.js",
+      "limit": "175B"
+    },
+    {
+      "path": "dist/tiny-invariant.js",
+      "limit": "176B"
+    },
+    {
+      "path": "dist/tiny-invariant.cjs.js",
+      "limit": "164B"
+    },
+    {
+      "path": "dist/tiny-invariant.esm.js",
+      "import": "foo",
+      "limit": "49B"
+    }
+  ],
   "scripts": {
     "test": "yarn jest",
+    "test:size": "yarn build && yarn size-limit",
     "prettier:write": "yarn prettier --debug-check src/** test/**",
     "prettier:check": "yarn prettier --write src/** test/**",
     "typescript:check": "yarn tsc --noEmit src/*.ts test/*.ts",
@@ -39,6 +59,7 @@
   "devDependencies": {
     "@rollup/plugin-replace": "^3.0.0",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@size-limit/preset-small-lib": "^6.0.3",
     "@types/jest": "^27.0.2",
     "@types/rollup": "^0.54.0",
     "expect-type": "^0.13.0",
@@ -47,6 +68,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.58.3",
     "rollup-plugin-terser": "^7.0.2",
+    "size-limit": "^6.0.3",
     "ts-jest": "^27.0.7",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4"
