--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
   "name": "tiny-invariant",
   "version": "1.1.0",
+  "description": "A tiny invariant function",
   "keywords": [
     "invariant",
-    "error"
-  ],
-  "description": "A tiny invariant function",
-  "main": "dist/tiny-invariant.cjs.js",
-  "module": "dist/tiny-invariant.esm.js",
-  "types": "dist/tiny-invariant.d.ts",
-  "sideEffects": false,
-  "files": [
-    "/dist",
-    "/src"
+    "error",
+    "assert",
+    "asserts"
   ],
   "author": "Alex Reardon <alexreardon@gmail.com>",
   "license": "MIT",
@@ -23,6 +17,14 @@
   "bugs": {
     "url": "https://github.com/alexreardon/tiny-invariant/issues"
   },
+  "main": "dist/tiny-invariant.cjs.js",
+  "module": "dist/tiny-invariant.esm.js",
+  "types": "dist/tiny-invariant.d.ts",
+  "sideEffects": false,
+  "files": [
+    "/dist",
+    "/src"
+  ],
   "size-limit": [
     {
       "path": "dist/tiny-invariant.min.js",
