--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiny-invariant",
-  "version": "1.1.0",
+  "version": "1.2.0-beta.1",
   "description": "A tiny invariant function",
   "keywords": [
     "invariant",
