--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "types": "dist/tiny-invariant.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/tiny-invariant.d.ts",
       "import": "./dist/esm/tiny-invariant.js",
       "default": "./dist/tiny-invariant.cjs.js"
     }
@@ -60,9 +61,8 @@
     "build:clean": "rimraf dist",
     "build:flow": "cp src/tiny-invariant.js.flow dist/tiny-invariant.cjs.js.flow",
     "build:typescript": "tsc ./src/tiny-invariant.ts --emitDeclarationOnly --declaration --outDir ./dist",
-    "build:typescript:esm": "tsc ./src/tiny-invariant.ts --emitDeclarationOnly --declaration --outDir ./dist/esm",
     "build:dist": "yarn rollup --config rollup.config.js",
-    "build": "yarn build:clean && yarn build:dist && yarn build:typescript && yarn build:typescript:esm",
+    "build": "yarn build:clean && yarn build:dist && yarn build:typescript",
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
