--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "types": "dist/tiny-invariant.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/tiny-invariant.d.ts",
       "import": "./dist/esm/tiny-invariant.js",
-      "default": "./dist/tiny-invariant.cjs.js"
+      "default": {
+        "types": "./dist/tiny-invariant.d.ts",
+        "default": "./dist/tiny-invariant.cjs.js"
+      }
     }
   },
   "sideEffects": false,
@@ -61,8 +63,9 @@
     "build:clean": "rimraf dist",
     "build:flow": "cp src/tiny-invariant.js.flow dist/tiny-invariant.cjs.js.flow",
     "build:typescript": "tsc ./src/tiny-invariant.ts --emitDeclarationOnly --declaration --outDir ./dist",
+    "build:typescript:esm": "tsc ./src/tiny-invariant.ts --emitDeclarationOnly --declaration --outDir ./dist/esm",
     "build:dist": "yarn rollup --config rollup.config.js",
-    "build": "yarn build:clean && yarn build:dist && yarn build:typescript",
+    "build": "yarn build:clean && yarn build:dist && yarn build:typescript && yarn build:typescript:esm",
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
