--- a/.github/workflows/bundle-size-check.yml
+++ b/.github/workflows/bundle-size-check.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version-file: '.nvmrc'
           # Using node action to manage caching node_modules
-          cache: 'yarn'
+          cache: 'npm'
 
       # The size limit github action
       - name: Run size limit github action
