--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "scripts": {
     "test": "jest",
     "test:size": "npm run build && size-limit",
+    "test:lib-consumption": "npx ts-node --esm --project ./test-lib-consumption/tsconfig.json ./test-lib-consumption/run-scenarios.mts",
     "prettier:write": "prettier --debug-check src/** test/**",
     "prettier:check": "prettier --write src/** test/**",
     "typescript:check": "tsc --noEmit src/*.ts test/*.ts",
@@ -72,16 +73,22 @@
     "@rollup/plugin-typescript": "^8.5.0",
     "@size-limit/preset-small-lib": "^8.1.0",
     "@types/jest": "^29.1.1",
+    "@types/js-yaml": "^4.0.5",
     "@types/rollup": "^0.54.0",
+    "@verdaccio/types": "^10.7.0",
     "expect-type": "^0.14.2",
     "jest": "^29.1.2",
+    "js-yaml": "^4.1.0",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
     "size-limit": "^8.1.0",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "verdaccio": "^5.16.3",
+    "zx": "^7.1.1"
   }
 }
