test: implement scenarios and run them

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ dist/
 yarn-error.log
 npm-debug.log
 npm-debug.log.*
+
+# files for the lib-consumption tests
+test-lib-consumption/.verdaccio
+test-lib-consumption/scenarios/*/.npmrc
