Revert "refactor: migrate from yarn to npm"
This reverts commit 83cdebc049a09aa39d722219b07cef946e000f68.

--- a/.github/workflows/bundle-size-check.yml
+++ b/.github/workflows/bundle-size-check.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version-file: '.nvmrc'
           # Using node action to manage caching node_modules
-          cache: 'npm'
+          cache: 'yarn'
 
       # The size limit github action
       - name: Run size limit github action
