--- a/.github/workflows/test-pkg-consumption.yml
+++ b/.github/workflows/test-pkg-consumption.yml
@@ -28,4 +28,4 @@ jobs:
         run: yarn install
 
       - name: Run tests
-        run: yarn test:lib-consumption
+        run: yarn test:pkg-consumption
