--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   "scripts": {
     "test": "yarn jest",
     "test:size": "yarn build && yarn size-limit",
-    "test:lib-consumption": "vitest --config vitest-lib-consumption.config.ts run",
+    "test:pkg-consumption": "pkg-consumption-test --packageName=\"tiny-invariant\" --pathToScenariosDirectory=\"./test-pkg-consumption\"",
     "prettier:write": "yarn prettier --debug-check src/** test/**",
     "prettier:check": "yarn prettier --write src/** test/**",
     "typescript:check": "yarn tsc --noEmit src/*.ts test/*.ts",
@@ -69,12 +69,12 @@
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
+    "@pkerschbaum/pkg-consumption-test": "^1.0.0",
     "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-typescript": "^8.5.0",
     "@size-limit/preset-small-lib": "^8.1.0",
     "@types/jest": "^29.1.1",
     "@types/rollup": "^0.54.0",
-    "@verdaccio/types": "^10.7.0",
     "expect-type": "^0.14.2",
     "jest": "^29.1.2",
     "prettier": "^2.7.1",
@@ -83,11 +83,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "size-limit": "^8.1.0",
     "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.8.4",
-    "verdaccio": "^5.16.3",
-    "vitest": "^0.25.2",
-    "zx": "^7.1.1"
+    "typescript": "^4.8.4"
   }
 }
