--- a/package.json
+++ b/package.json
@@ -58,31 +58,32 @@
     "test:size": "yarn build && yarn size-limit",
     "prettier:write": "yarn prettier --debug-check src/** test/**",
     "prettier:check": "yarn prettier --write src/** test/**",
-    "typescript:check": "yarn tsc --noEmit src/*.ts test/*.ts",
+    "typescript:check": "tsc --noEmit",
     "validate": "yarn prettier:check && yarn typescript:check",
     "build:clean": "rimraf dist",
     "build:flow": "cp src/tiny-invariant.js.flow dist/tiny-invariant.cjs.js.flow",
     "build:typescript": "tsc ./src/tiny-invariant.ts --emitDeclarationOnly --declaration --outDir ./dist",
     "build:typescript:esm": "tsc ./src/tiny-invariant.ts --emitDeclarationOnly --declaration --outDir ./dist/esm",
-    "build:dist": "yarn rollup --config rollup.config.js",
+    "build:dist": "yarn rollup --config rollup.config.mjs",
     "build": "yarn build:clean && yarn build:dist && yarn build:typescript && yarn build:typescript:esm",
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
-    "@rollup/plugin-replace": "^4.0.0",
-    "@rollup/plugin-typescript": "^8.5.0",
-    "@size-limit/preset-small-lib": "^8.1.0",
-    "@types/jest": "^29.1.1",
+    "@rollup/plugin-replace": "^5.0.5",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@size-limit/preset-small-lib": "^11.0.2",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.20",
     "@types/rollup": "^0.54.0",
-    "expect-type": "^0.14.2",
-    "jest": "^29.1.2",
-    "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.79.1",
+    "expect-type": "^0.17.3",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5",
+    "rimraf": "^5.0.5",
+    "rollup": "^4.12.0",
     "rollup-plugin-terser": "^7.0.2",
-    "size-limit": "^8.1.0",
-    "ts-jest": "^29.0.3",
-    "tslib": "^2.4.0",
-    "typescript": "^4.8.4"
+    "size-limit": "^11.0.2",
+    "ts-jest": "^29.1.2",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.3"
   }
 }
